tests/snapshots/conformance__n_string_with_trailing_garbage.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
""x
stdout --- 
<empty>
stderr --- 
error: unexpected character `x`. expected start of a json value
 --> stdin:1:3
  |
1 | ""x
  |   ^
