tests/snapshots/conformance__n_structure_angle_bracket_null.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[<null>]
stdout --- 
<empty>
stderr --- 
error: unexpected character `<`. expected start of a json value
 --> stdin:1:2
  |
1 | [<null>]
  |  ^
