tests/snapshots/conformance__n_structure_array_with_extra_array_close.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1]]
stdout --- 
<empty>
stderr --- 
error: unexpected token `]` after json finished
 --> stdin:1:4
  |
1 | [1]]
  |    ^
  |
help: consider removing the trailing content (starting with `]`)
  |
1 - [1]]
1 + [1]
  |
