tests/snapshots/conformance__n_structure_ascii-unicode-identifier.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
aå
stdout --- 
<empty>
stderr --- 
error: unexpected character `a`. expected start of a json value
 --> stdin:1:1
  |
1 | aå
  | ^
