tests/snapshots/conformance__n_structure_capitalized_true.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[True]
stdout --- 
<empty>
stderr --- 
error: unexpected character `T`. expected start of a json value
 --> stdin:1:2
  |
1 | [True]
  |  ^
