tests/snapshots/conformance__n_structure_incomplete_utf8_bom.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
<raw bytes>
[239, 187, 123, 125]
stdout --- 
<empty>
stderr --- 
error: source did not contain valid utf8
 --> stdin
  |
