tests/snapshots/conformance__n_structure_lone-invalid-utf-8.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
<raw bytes>
[229]
stdout --- 
<empty>
stderr --- 
error: source did not contain valid utf8
 --> stdin
  |
